--- a/src/index.css
+++ b/src/index.css
@@ -60,7 +60,7 @@ body {
 /*navbar*/
 .navbar {
   position: absolute;
-  top: 30px;
+  top: 80px;
   left: 50%;
   transform: translatex(-50%);
   padding: 50px 0;
@@ -72,12 +72,12 @@ body {
 }
 .navbar ul {
   display: flex;
-  flex-direction: column;
+  flex-direction: row;
   align-items: center;
   justify-content: center;
 }
 .navbar ul li {
-  margin: 10px 0;
+  /* margin: 10px 0; */
 }
 .state .state-img {
   width: 500px;
